--- a/SkillTrackerUI/src/app/app.component.html
+++ b/SkillTrackerUI/src/app/app.component.html
@@ -6,7 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/skilldashboard']">Dashboard <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
