--- a/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.html
+++ b/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.html
@@ -62,7 +62,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <div class="table-responsive">
+                    <div class="table-responsive table-scroll">
                         <table class="table" style="font-size: 13px;">
                             <tbody>
                                 <tr>
