--- a/SkillTrackerUI/src/app/addskill/addskill.component.html
+++ b/SkillTrackerUI/src/app/addskill/addskill.component.html
@@ -6,7 +6,7 @@
     <div class="col-sm-2">
           Add Skill:
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-8 simple-form">
       <input type="text" class="input-control form_txt" placeholder="Skill Name" [(ngModel)]="skill" name="skill" required  />
       <input type="hidden" [(ngModel)]="skillID" name="skillID"/>
     </div>
