--- a/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.html
+++ b/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.html
@@ -65,9 +65,9 @@
                     <div class="table-responsive table-scroll">
                         <table class="table" style="font-size: 13px;">
                             <thead>
-                                <tr>
-                                    <th width="40px"><label class="sformtxt txtpic">Pic</label></th>
-                                    <th width="55px"><label class="sformtxt txtstatus">status</label></th>
+                                <tr class="simple-form">
+                                    <th width="40px"><label class="txtpicGrid">Pic</label></th>
+                                    <th width="55px"><label class="txtstatusGrid">status</label></th>
                                     <th><input class="sformtxt txtname" placeholder="name" name="name" [(ngModel)]="name" type="text"></th>
                                     <th><input class="sformtxt txtid" placeholder="Associate ID" name="associateID" [(ngModel)]="associateID" type="text"></th>
                                     <th><input class="sformtxt txtemail" placeholder="Email ID" name="email" [(ngModel)]="email" type="text"></th>
