--- a/SkillTrackerUI/src/app/addskill/addskill.component.css
+++ b/SkillTrackerUI/src/app/addskill/addskill.component.css
@@ -34,3 +34,27 @@
 ::-ms-input-placeholder { /* Microsoft Edge */
     text-align: center;
 }
+.simple-form {
+  padding-bottom: 1.25rem;
+}
+.simple-form input {
+  margin: 0 .25rem;
+  max-width: 100%;
+  height:30px;
+  border: 1px solid #eee;
+  border-left: 3px solid;
+  border-radius: 5px;
+  transition: border-color .5s ease-out;
+}
+.simple-form input:optional {
+  border-left-color: #999;
+}
+.simple-form textarea:optional {
+  border-left-color: #999;
+}
+.simple-form input:required {
+  border-left-color: palegreen;
+}
+.simple-form input:invalid {
+  border-left-color: salmon;
+}
