--- a/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.css
+++ b/SkillTrackerUI/src/app/skilldashboard/skilldashboard.component.css
@@ -6,3 +6,36 @@
 .table thead th {
     vertical-align: top;
 }
+.simple-form {
+  
+  padding-bottom: 1.25rem;
+}
+.simple-form input {
+  margin: 0 .25rem;
+  max-width: 225px;
+  border: 1px solid #eee;
+  border-left: 3px solid;
+  border-radius: 5px;
+  transition: border-color .5s ease-out;
+}
+.simple-form input:optional {
+  border-left-color: palegreen;
+}
+.simple-form textarea:optional {
+  border-left-color: #999;
+}
+.simple-form input:required {
+  border-left-color: palegreen;
+}
+.simple-form input:invalid {
+  border-left-color: salmon;
+}
+table tr:nth-child(odd) td{
+  background-color: #cfdcfc;
+}
+table tr:nth-child(even) td{
+  background-color: #e5efff;
+}
+table tr th{
+  background-color: #305287;
+}
