--- a/SkillTrackerUI/src/app/updateemployee/updateemployee.component.css
+++ b/SkillTrackerUI/src/app/updateemployee/updateemployee.component.css
@@ -136,13 +136,9 @@
 }
 
 .switch-field-green input:checked + label {
-  -webkit-box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 5px 3px rgba(0, 0, 0, 0.3), 0 2px rgba(255, 255, 255, 0.1);
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition:    all 0.2s ease-in-out;
-  -ms-transition:     all 0.2s ease-in-out;
-  -o-transition:      all 0.2s ease-in-out;
-  transition:         all 0.2s ease-in-out;
+  -moz-box-shadow:    inset 0 0 20px #000000;
+  -webkit-box-shadow: inset 0 0 20px #000000;
+  box-shadow:         inset 0 0 20px #000000;
 }
 
 .switch-field-green label:first-of-type {
@@ -198,13 +194,9 @@
 }
 
 .switch-field-red input:checked + label {
-  -webkit-box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 5px 3px rgba(0, 0, 0, 0.3), 0 2px rgba(255, 255, 255, 0.1);
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition:    all 0.2s ease-in-out;
-  -ms-transition:     all 0.2s ease-in-out;
-  -o-transition:      all 0.2s ease-in-out;
-  transition:         all 0.2s ease-in-out;
+  -moz-box-shadow:    inset 0 0 20px #000000;
+  -webkit-box-shadow: inset 0 0 20px #000000;
+  box-shadow:         inset 0 0 20px #000000;
 }
 
 .switch-field-red label:first-of-type {
@@ -260,13 +252,9 @@
 }
 
 .switch-field-blue input:checked + label {
-  -webkit-box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 5px 3px rgba(0, 0, 0, 0.3), 0 2px rgba(255, 255, 255, 0.1);
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition:    all 0.2s ease-in-out;
-  -ms-transition:     all 0.2s ease-in-out;
-  -o-transition:      all 0.2s ease-in-out;
-  transition:         all 0.2s ease-in-out;
+  -moz-box-shadow:    inset 0 0 20px #000000;
+  -webkit-box-shadow: inset 0 0 20px #000000;
+  box-shadow:         inset 0 0 20px #000000;
 }
 
 .switch-field-blue label:first-of-type {
@@ -326,7 +314,7 @@
 .switch-field input:checked + label {
   background-color: #A5DC86;
   -webkit-box-shadow: none;
-  box-shadow: none;
+  box-shadow:inset 0 0 5px #000000;
 }
 
 .switch-field label:first-of-type {
@@ -356,6 +344,7 @@
 
 .switch-field-gender label {
   float: left;
+  width: 68px;
 }
 
 .switch-field-gender label {
@@ -383,7 +372,7 @@
 .switch-field-gender input:checked + label {
   background-color: #A5DC86;
   -webkit-box-shadow: none;
-  box-shadow: none;
+  box-shadow: inset 0 0 5px #000000;
 }
 
 .switch-field-gender label:first-of-type {
@@ -392,4 +381,36 @@
 
 .switch-field-gender label:last-of-type {
   border-radius: 0 0 0 0;
+}
+.simple-form {
+  
+  padding-bottom: 1.25rem;
+}
+.simple-form input {
+  margin: 0 .25rem;
+  max-width: 90%;
+  border: 1px solid #eee;
+  border-left: 3px solid;
+  border-radius: 5px;
+  transition: border-color .5s ease-out;
+}
+.simple-form textarea {
+  margin: 0 .25rem;
+  max-width: 98%;
+  border: 1px solid #eee;
+  border-left: 3px solid;
+  border-radius: 5px;
+  transition: border-color .5s ease-out;
+}
+.simple-form input:optional {
+  border-left-color: #999;
+}
+.simple-form textarea:optional {
+  border-left-color: #999;
+}
+.simple-form input:required {
+  border-left-color: palegreen;
+}
+.simple-form input:invalid {
+  border-left-color: salmon;
 }
