--- a/SkillTrackerUI/src/app/updateemployee/updateemployee.component.html
+++ b/SkillTrackerUI/src/app/updateemployee/updateemployee.component.html
@@ -5,14 +5,14 @@
       <input type="hidden" [(ngModel)]="id">
   </div>
   <div class="form-row">
-      <div class="col-sm-4 divPadding">
-          <div class="col-sm-12">
+      <div class="col-sm-4 divPaddingText">
+          <div class="col-sm-12  simple-form" >
               <div class="row">
                   <div class="col-sm-4">
                       <label class="form_label">Name</label>
                   </div>
                   <div class="col-sm-8">
-                      <input class="form_txt" type="text" [(ngModel)]="name">
+                      <input class="form_txt" type="text" [(ngModel)]="name" placeholder="Name" required #uname="ngModel">
                   </div>
               </div>
               <div class="row">
@@ -20,7 +20,7 @@
                       <label class="form_label">Associate ID</label>
                   </div>
                   <div class="col-sm-8">
-                      <input class="form_txtsm" type="text" [(ngModel)]="associateID">
+                      <input class="form_txtsm" type="number" [(ngModel)]="associateID" required placeholder="Associate ID">
                   </div>
               </div>
               <div class="row">
@@ -28,7 +28,7 @@
                       <label class="form_label">Email</label>
                   </div>
                   <div class="col-sm-8">
-                      <input class=" form_txt" type="email" [(ngModel)]="email">
+                      <input class=" form_txt" type="email" [(ngModel)]="email" required placeholder="Email Address">
                   </div>
               </div>
               <div class="row">
@@ -36,31 +36,33 @@
                       <label class="form_label">Mobile</label>
                   </div>
                   <div class="col-sm-8">
-                      <input class="form_txtsm" type="tel" [(ngModel)]="mobile">
+                      <input class="form_txtsm" type="number" [(ngModel)]="mobile" required placeholder="Mobile no.">
                   </div>
               </div>
               <div class="row">
                   <div class="col-sm-4">
                       <label class="form_label">Gender</label>
                   </div>
-                  <div class="col-sm-8">
-                      <div class="switch-field-gender">  
-                          <div class="level">
-                              <input type="radio" id="gender_M" name="gender" value="M" [(ngModel)]="gender"/>
-                              <label for="gender_M">Male</label>
-                          </div>
-                      </div>
-                      <div class="switch-field-gender">  
-                          <div class="level">
-                              <input type="radio" id="gender_F" name="gender" value="F" [(ngModel)]="gender"/>
-                              <label for="gender_F">Female</label>
-                          </div>
+                  <div class="col-sm-8" style="padding-left:5.5%; ">
+                      <div class="row">
+                        <div class="switch-field-gender">  
+                            <div class="level">
+                                <input type="radio" id="gender_M" name="gender" required value="M" [(ngModel)]="gender"/>
+                                <label for="gender_M">Male</label>
+                            </div>
+                        </div>
+                        <div class="switch-field-gender">  
+                            <div class="level">
+                                <input type="radio" id="gender_F" name="gender" required value="F" [(ngModel)]="gender"/>
+                                <label for="gender_F">Female</label>
+                            </div>
+                        </div>
                       </div>
                   </div>
               </div>
           </div> 
       </div>
-      <div class="col-sm-2 divPadding">
+      <div class="col-sm-3 divPadding">
         <div class="row">
           <div class="col-sm-12">
               <div id="image-preview" [style.backgroundImage]="'url(' + bgImage + ')'">
@@ -114,13 +116,13 @@
               </div>
           </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-3">
           <div class="row">
               <div class="col-sm-12">
                   <div class="row">
-                      <div class="col-sm-12">
+                      <div class="col-sm-12 simple-form">
                           <label>Remarks:</label>
-                          <textarea class="form_txtarea" [(ngModel)]="remarks"></textarea>
+                          <textarea class="form_txtarea" [(ngModel)]="remarks" placeholder="Remarks"></textarea>
                       </div>
                   </div>
               </div>
@@ -141,7 +143,7 @@
         <div class="col-sm-4" *ngFor="let result of skillForm.get('skillslider')['controls']; let i = index" [formGroupName]="i">
             <div class="range_main">
                 <div class="col-sm-4 range_label">
-                    <input type="text" class="txtLabel" readonly formControlName="Skill_Name"/>
+                    <input type="text" readonly class="txtLabel" formControlName="Skill_Name"/>
                 </div>
                 <div class="col-sm-8 range_slider">
                     <span class="start">0</span>
@@ -155,12 +157,12 @@
       </ng-container>      
     </form>
     <div class="col-sm-4">
-        <div class="form-row range_main">
+        <div class="form-row range_main simple-form">
             <div class="col-sm-4 range_label">
                 <label>Others</label>
             </div>
             <div class="col-sm-8">        
-                <input type="text" class="form_txtsm" [(ngModel)]="others">
+                <input type="text" class="form_txtsm" [(ngModel)]="others" placeholder="Others">
             </div>
         </div>
     </div>
@@ -168,14 +170,14 @@
   <div class="row">
       <div class="dotted_line"></div>
   </div>
-  <div class="form-row divPadding">
+  <div class="form-row divPadding simple-form">
       <div class="col-sm-5">
           <div class="form-row">
-              <div class="col-sm-2">
+              <div class="col-sm-3">
                   <label class="form_label">Strength</label>
               </div>
-              <div class="col-sm-10">
-                  <input class="form_txt" type="text" [(ngModel)]="strength">
+              <div class="col-sm-9">
+                  <input class="form_txt" type="text" [(ngModel)]="strength" placeholder="Strength">
               </div>
           </div>
       </div>
@@ -183,11 +185,11 @@
       </div>
       <div class="col-sm-6">
         <div class="form-row">
-              <div class="col-sm-2">
+              <div class="col-sm-3">
                   <label class="form_label">Weakness</label>
               </div>
-              <div class="col-sm-8">
-                  <input class="form_txt" type="text" [(ngModel)]="weakness">
+              <div class="col-sm-9">
+                  <input class="form_txt" type="text" [(ngModel)]="weakness" placeholder="Weakness">
               </div>
           </div>
       </div> 
